data/derived/comb/progs/unify/prog0737.ml.out
Characters 58-74:
  | x :: xs -> List.fold_left x + xs;;
               ^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'b list -> 'a
       but an expression was expected of type int
